--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Simple Practices to Transform Your Daily Life | With Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 minutes ago</div>
+                        <div class="date">34 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How Simple Practices Transform Daily Life</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">29 minutes ago</div>
+                        <div class="date">42 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 13</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">51 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>The WORST Timing Ever</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Can Science & Spirituality Meet? Cosmologist Dr. Jude Currivan & Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>Fly high puffle 🕊️</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -398,7 +398,7 @@
                     <div class="video-info">
                         <h3>Some unique intimidation tactics here ￼</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -409,7 +409,7 @@
                     <div class="video-info">
                         <h3>Hope they didn’t see that</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -420,7 +420,7 @@
                     <div class="video-info">
                         <h3>I bought all of it</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 13</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">51 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Simple Practices to Transform Your Daily Life | With Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 minutes ago</div>
+                            <div class="date">34 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How Simple Practices Transform Daily Life</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">29 minutes ago</div>
+                            <div class="date">42 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>Can Science & Spirituality Meet? Cosmologist Dr. Jude Currivan & Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>The WORST Timing Ever</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10283,7 +10283,7 @@
                         <div class="video-info">
                             <h3>Fly high puffle 🕊️</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10294,7 +10294,7 @@
                         <div class="video-info">
                             <h3>Some unique intimidation tactics here ￼</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10305,7 +10305,7 @@
                         <div class="video-info">
                             <h3>Hope they didn’t see that</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10316,7 +10316,7 @@
                         <div class="video-info">
                             <h3>I bought all of it</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
